// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selectors: sendingDomains should append DKIM keys to domain object 1`] = `
Object {
  "dkim": Object {
    "public": "123456789A",
    "selector": "scph0118",
  },
  "dkimHostname": "scph0118._domainkey.xyz.com",
  "dkimValue": "v=DKIM1; k=rsa; h=sha256; p=123456789A",
  "id": "xyz.com",
}
`;

exports[`Selectors: sendingDomains should return all domains ready for bounce domains 1`] = `
Array [
  Object {
    "domain": "dkim-verified.test",
    "status": Object {
      "cname_status": "invalid",
      "compliance_status": "valid",
      "dkim_status": "valid",
      "mx_status": "valid",
      "ownership_verified": false,
    },
  },
  Object {
    "domain": "compliance-verified.test",
    "status": Object {
      "cname_status": "valid",
      "compliance_status": "pending",
      "dkim_status": "invalid",
      "mx_status": "invalid",
      "ownership_verified": true,
    },
  },
  Object {
    "domain": "verified-but-blocked.test",
    "status": Object {
      "cname_status": "valid",
      "compliance_status": "blocked",
      "dkim_status": "valid",
      "mx_status": "valid",
      "ownership_verified": true,
    },
  },
]
`;

exports[`Selectors: sendingDomains should return all domains that are dkim verified 1`] = `
Array [
  "dkim-verified.test",
  "verified-but-blocked.test",
]
`;

exports[`Selectors: sendingDomains should return all domains that are not blocked 1`] = `
Array [
  Object {
    "domain": "owner-verified.test",
    "status": Object {
      "compliance_status": "valid",
      "ownership_verified": true,
    },
  },
  Object {
    "domain": "dkim-verified.test",
    "status": Object {
      "cname_status": "invalid",
      "compliance_status": "valid",
      "dkim_status": "valid",
      "mx_status": "valid",
      "ownership_verified": false,
    },
  },
  Object {
    "domain": "compliance-verified.test",
    "status": Object {
      "cname_status": "valid",
      "compliance_status": "pending",
      "dkim_status": "invalid",
      "mx_status": "invalid",
      "ownership_verified": true,
    },
  },
]
`;

exports[`Selectors: sendingDomains should return all verified domains 1`] = `
Array [
  Object {
    "domain": "owner-verified.test",
    "status": Object {
      "compliance_status": "valid",
      "ownership_verified": true,
    },
  },
]
`;

exports[`Selectors: sendingDomains should use signing domain when present for DKIM hostname 1`] = `
Object {
  "dkim": Object {
    "public": "123456789A",
    "selector": "scph0118",
    "signing_domain": "iamsigning.edu",
  },
  "dkimHostname": "scph0118._domainkey.iamsigning.edu",
  "dkimValue": "v=DKIM1; k=rsa; h=sha256; p=123456789A",
  "id": "xyz.com",
}
`;
